fixed weekly table header z-index issue

--- a/app/assets/stylesheets/calendar/header.scss
+++ b/app/assets/stylesheets/calendar/header.scss
@@ -13,7 +13,7 @@
   align-items: center;
   gap: 0.5rem;
   position: sticky;
-  z-index: 2;
+  z-index: 3;
   width: $main-width-medium;
   margin-bottom: 0.25rem;
   background-color: $theme-white;
@@ -21,9 +21,9 @@
   top: 0;
 
   .hamburger-background {
-    width: 100%;
-    z-index: 100;
-    height: 100%;
+    width: 100dvw;
+    z-index: 3;
+    height: 100dvh;
     position: absolute;
     inset: 0;
   }
@@ -33,7 +33,7 @@
     position: absolute;
     width: 10rem;
     border-radius: 0.75rem;
-    z-index: 100;
+    z-index: 3;
 
     button {
       color: $theme-navy-faded;
