--- a/app/assets/stylesheets/meetings/weekly.scss
+++ b/app/assets/stylesheets/meetings/weekly.scss
@@ -37,7 +37,7 @@ $number-of-hour-cells: 17;
     }
 
     .today {
-      border: 1px solid #0b57d0;
+      // border: 1px solid #0b57d0;
     }
     .hours {
       border-right: 1px solid $table-border-color;
@@ -78,15 +78,8 @@ $number-of-hour-cells: 17;
       position: sticky;
       z-index: 2;
 
-      @media (min-width: 368px) and (max-width: 768px) {
-        width: $main-width-medium;
-        top: 40px;
-      }
-
-      @media (min-width: 768px) {
-        width: $main-width-medium;
-        top: 42px;
-      }
+      width: $main-width-medium;
+      top: 40px;
 
       .date {
         display: flex;
@@ -167,7 +160,7 @@ $number-of-hour-cells: 17;
         display: flex;
         flex-direction: column;
         position: relative;
-        // border-right: 1px solid $table-border-color;
+        border-right: 1px solid $table-border-color;
         height: calc($number-of-hour-cells * 100px);
 
         .weekly-meeting {
